# DiceRoll

./: CMakeLists.txt  CharacterSheet.h  DnD.cpp  DnD.slnx  DnDMechanics.h
DnD/: CharacterSheet.h  DnD.cpp  DnD.vcxproj  DnD.vcxproj.filters  character_save_1.txt  character_save_2.txt  character_save_3.txt
DnD/x64/Debug/: DnD.exe.recipe  DnD.ilk  DnD.vcxproj.FileListAbsolute.txt  vc145.idb
DnD/x64/Debug/DnD.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  DnD.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
DnDTests/: DnDTests.vcxproj  test.cpp
DnDTests/x64/Debug/: DnDTests.exe.recipe  DnDTests.vcxproj.FileListAbsolute.txt
DnDTests/x64/Debug/DnDTests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  DnDTests.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
TestResults/8c9e19de-0169-499c-bdbd-9bd713207a2d/: user_TOBINB_2026-02-22.14_03_48.coverage
src/: CMakeLists.txt  CharacterSheet.h  DnD.cpp  DnDMechanics.h  character_save_3.txt
test/: CMakeLists.txt  test.cpp
x64/Debug/: DnDTests.exe.gta.testdurations  XMLGoogleTestResults.xml
